[package]
name = "hobby"
version = "0.1.0"
edition = "2021"

[dependencies]
age = "0.11.0"
anyhow = "1.0.92"
clap = { version = "4.5.20", features = ["derive"] }

homedir = "0.3.4"
md5 = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_yaml = "0.9.34"
ssh2 = "0.9.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
